--- a/ui/startup_dialog.glade
+++ b/ui/startup_dialog.glade
@@ -15,19 +15,7 @@
             <property name="can-focus">False</property>
             <property name="layout-style">center</property>
             <child>
-              <object class="GtkButton">
-                <property name="label" translatable="yes">Export Configuration</property>
-                <property name="visible">True</property>
-                <property name="can-focus">True</property>
-                <property name="receives-default">True</property>
-                <property name="margin-top">10</property>
-                <property name="margin-bottom">10</property>
-              </object>
-              <packing>
-                <property name="expand">True</property>
-                <property name="fill">True</property>
-                <property name="position">0</property>
-              </packing>
+              <placeholder/>
             </child>
             <child>
               <object class="GtkButton" id="ok-button">
@@ -52,7 +40,7 @@
           </packing>
         </child>
         <child>
-          <!-- n-columns=2 n-rows=14 -->
+          <!-- n-columns=2 n-rows=15 -->
           <object class="GtkGrid">
             <property name="visible">True</property>
             <property name="can-focus">False</property>
@@ -409,6 +397,45 @@
               <packing>
                 <property name="left-attach">0</property>
                 <property name="top-attach">3</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkBox">
+                <property name="visible">True</property>
+                <property name="can-focus">False</property>
+                <property name="halign">center</property>
+                <property name="spacing">10</property>
+                <child>
+                  <object class="GtkButton" id="clear-config-button">
+                    <property name="label" translatable="yes">Clear Config</property>
+                    <property name="visible">True</property>
+                    <property name="can-focus">True</property>
+                    <property name="receives-default">True</property>
+                  </object>
+                  <packing>
+                    <property name="expand">False</property>
+                    <property name="fill">True</property>
+                    <property name="position">0</property>
+                  </packing>
+                </child>
+                <child>
+                  <object class="GtkButton" id="export-config-button">
+                    <property name="label" translatable="yes">Export Config</property>
+                    <property name="visible">True</property>
+                    <property name="can-focus">True</property>
+                    <property name="receives-default">True</property>
+                  </object>
+                  <packing>
+                    <property name="expand">False</property>
+                    <property name="fill">True</property>
+                    <property name="position">1</property>
+                  </packing>
+                </child>
+              </object>
+              <packing>
+                <property name="left-attach">0</property>
+                <property name="top-attach">14</property>
+                <property name="width">2</property>
               </packing>
             </child>
           </object>
