--- a/ui/window.glade
+++ b/ui/window.glade
@@ -143,7 +143,7 @@
                 </child>
                 <child>
                   <object class="GtkButton" id="stop-button">
-                    <property name="label" translatable="yes">Stop</property>
+                    <property name="label" translatable="yes">Pause</property>
                     <property name="visible">True</property>
                     <property name="can-focus">True</property>
                     <property name="receives-default">True</property>
